--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">LoginScreen</string>
+    <string name="english">English</string>
+    <string name="password">Password</string>
+    <string name="log_in">LOG IN</string>
+    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="email_or_phone">Email or Phone</string>
+    <string name="change">Change</string>
+    <string name="middleDot">·</string>
+    <string name="todo">TODO</string>
 </resources>
